<resources>
    <string name="app_name">My_Calculator_App</string>
    <string name="enter_your_value">Enter your value</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="result">0.</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="double_zero">00</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal_to">=</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="product">X</string>
    <string name="divide">÷</string>
    <string name="delete">del</string>
    <string name="modulo">%</string>
    <string name="clear">C</string>
    <string name="welcome">Welcome to MY Calculator</string>
    <string name="calc">CALC</string>
    <string name="zero_hint">0.</string>
</resources>